[+] New feature
[-] Bug fixed


v1.06 ()
    [+] Albums in the Library can be added to favorites using the popup menu
    [-] CD explorer not always removed when unloading the CD module (#603902)
    [-] AudioScrobbler submission blocked by '\0' bytes (#604016)
    [-] Tracklist scrolls up upon insertion (#607261)


v1.05 (27/06/10)
    [+] Stick to the Media Player Remote Interface Specifications (#534021)
    [+] Show some information on the selected tracks in the status bar
    [+] Added presets to the equalizer
    [+] [StatusIcon] Middle-click toggles pause, scroll changes volume (Laszlo Pandy)
    [+] Added Zeitgeist support (#579972)
    [-] Skips two songs when one is not found (#581654)
    [-] Fixed crash in some rare occasions when trying to set the cover for the current track
    [-] Fixed Gnome media keys no longer working when starting/closing multiple instances
    [-] Fixed labels not always properly updated in the equalizer
    [ ] Ignore disc number when it looks like '1/1' (#596350)
    [ ] Improved startup time
    [ ] The playbin2 GStreamer component is now used by default (use the --playbin flag to use the old playbin component)
    [ ] Equalizer module has a menu item (CTRL-E) when enabled (#495761)
    [ ] Close properly on CTRL-C


v1.04 (13/05/10)
    [+] Show album cover in desktop notifications if both modules are enabled (#418076)
    [+] Added a wildcard (*) for cover names (#541763)
    [+] Added more keyboard shortcuts to the tracklist (#523689)
    [+] CD-ROM read speed can be configured (#502297)
    [+] Added a bitrate column in the tracklist (hidden by default)
    [-] Drag'n'Drop into the playlist not always working correctly (#501114)
    [-] Improper sorting when adding tracks that don't all have a performer tag (#509494)
    [-] Don't allow playback of a disc when there is no disc in the drive
    [-] Removing a root folder in the File Explorer doesn't work correctly (#496154)